# Strata-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  corpus-rules.yaml  docker-compose.yml  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: ci.yml
data/sample/: atlas.tsv  northwind.tsv
data/sample/atlas/atlas-ledger/: README.md  settings.md  task.md
data/sample/atlas/atlas-ledger/back/: config.yaml  notes.txt
data/sample/atlas/atlas-ledger/docs/: accounts.txt  description.docx
data/sample/atlas/atlas-ledger/promo/: description_app_store.txt  description_google_play.txt
data/sample/atlas/atlas-orchard/: README.md
data/sample/atlas/atlas-orchard/docs/: addendum_injected.md  description.docx  design_system.md  orchard_interactive_mockup_requirements.md  prd.md  prd_v2.md
data/sample/atlas/atlas-quill/: README.md
data/sample/atlas/atlas-relay/: CHANGELOG.md  implementation_plan.md
data/sample/atlas/atlas-summit/promo/: description_app_store.txt
data/sample/atlas/atlas-vista/back/: config.yaml  contact.php  index.php
data/sample/northwind/0001/: CHANGELOG.md
data/sample/northwind/0001/docs/: design.txt  ideas.txt  overview.md  setup.txt
data/sample/northwind/0001/promo/: description.md
data/sample/northwind/0002/docs/: notes_injected.md  overview.md
data/sample/northwind/0002/promo/: description.md
data/sample/northwind/0003/docs/: implementation_plan.md  overview.md
data/sample/northwind/0003/original/: description_en.md
data/sample/northwind/0004/: pubspec.yaml
docs/: red-team.md
eval/: golden.yaml
policies/: generic.pack.yaml
rageval/: __init__.py  agent.py  aggregate.py  api.py  chunking.py  classify.py  config.py  dispatch.py  embeddings.py  enrich.py  eval.py  facts.py  generate.py  guardrails.py  harvest.py  index.py  ingest.py  inspect.py  llm.py  make_sample.py  manifest.py  metrics.py  normalize.py  ocr.py  pii.py  pii_compare.py  query_classes.py  redact.py  rerank.py  retrieve.py  roster.py  roster_check.py  router.py  sample_placeholders.py  sidecar.py  ui.py  vision.py
rageval/extract/: __init__.py  pdf.py  tabular.py
rageval/redteam/: __init__.py  __main__.py  agent.py  cli.py  encoders.py  oracle.py  payloads.py  report.py  runner.py  scenarios.py  target.py
rageval/sources/: __init__.py  atlas.py  base.py  northwind.py  registry.py  sample_facts.py  sample_policy.py
scripts/: leak-check.sh  semantic-audit.py
tests/: _helpers.py  attack_fixtures.py  conftest.py  test_agent.py  test_api_chat.py  test_chunking.py  test_classify.py  test_collection_ab.py  test_corpus_agnostic.py  test_data_dir_env.py  test_enrich.py  test_eval_schema.py  test_extract_pdf.py  test_extract_tabular.py  test_fusion_metrics.py  test_guardrails.py  test_harvest.py  test_normalize.py  test_ocr.py  test_pdf_ingestion.py  test_pii_presidio.py  test_plugins.py  test_provenance.py  test_redact.py  test_redteam.py  test_retrieve_preflight.py  test_roster.py  test_roster_check.py  test_router.py  test_security_multiformat.py  test_sources.py  test_ui.py  test_vision.py
