[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-rag"
version = "0.2.0"
description = "An eval-first, debuggable RAG engine over heterogeneous, multi-format document corpora (hybrid retrieval + cross-encoder rerank + Qdrant) with an eval harness — study material."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nikolai Sachok" }]
keywords = ["rag", "llm", "evaluation", "fastapi", "embeddings", "vector-search", "qdrant", "hybrid", "bm25", "rerank"]

# Core runtime dependencies. Versions are pinned to current-stable lower bounds so a
# fresh install is reproducible while still picking up patch releases.
dependencies = [
    "fastapi>=0.136,<1.0",
    "uvicorn[standard]>=0.49,<1.0",
    "pydantic>=2.13,<3.0",
    "qdrant-client>=1.12,<2.0",            # talks to the Qdrant vector DB (docker-compose.yml)
    "sentence-transformers>=5.5,<6.0",     # local embeddings AND the cross-encoder re-ranker
    "rank-bm25>=0.2.2,<0.3",               # the sparse (keyword) half of hybrid retrieval
    "python-docx>=1.2,<2.0",               # parse legacy .docx documents in the corpus
    "pypdf>=4.0,<7.0",                      # born-digital PDF text extraction (#39)
    "openpyxl>=3.1,<4.0",                   # read .xlsx spreadsheets → structured facts (#41)
    "PyYAML>=6.0,<7.0",                     # read corpus-rules.yaml and eval/golden.yaml
    "anthropic>=0.107,<1.0",               # the API LLM backend (CLI backend needs no package)
]

[project.optional-dependencies]
# Local-embedding default needs nothing extra. These extras are opt-in:
openai = ["openai>=2.0,<3.0"]          # for RAGEVAL_EMBEDDINGS=openai
# Optional NER PII-detection backend (RAGEVAL_PII_BACKEND=presidio). The lightweight regex
# detector is the DEFAULT and needs NOTHING here. A spaCy model is downloaded SEPARATELY (NOT
# bundled): `python -m spacy download en_core_web_sm` (en_core_web_lg for production accuracy).
pii = ["presidio-analyzer>=2.2,<3.0", "presidio-anonymizer>=2.2,<3.0"]
ui = ["streamlit>=1.58,<2.0", "requests>=2.32,<3.0"]
# Local OCR backend (RAGEVAL_OCR_PROVIDER=tesseract). The wrapper + Pillow are opt-in; the
# system `tesseract` binary is installed SEPARATELY (brew/apt). The seam has NO hard dependency:
# absent → the tesseract backend degrades to skip-with-reason (the mock/llm backends still work).
ocr = ["pytesseract>=0.3.10,<0.4", "Pillow>=10.0,<12.0"]
dev = ["pytest>=9.0,<10.0", "reportlab>=4.0,<5.0"]  # reportlab: generate born-digital PDF test fixtures in-CI

[project.scripts]
# Convenience entry points so you can run pipeline stages directly.
rageval-ingest = "rageval.ingest:main"
rageval-inspect = "rageval.inspect:main"
rageval-eval = "rageval.eval:main"
rageval-ask = "rageval.generate:main"
rageval-roster-check = "rageval.roster_check:main"
rageval-make-sample = "rageval.make_sample:main"

[tool.setuptools.packages.find]
include = ["rageval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
